refactor: 기존 공연 장르 init 제거 및 공연 작성 부분 수정